# DCT2

./: .gitignore  README.md
DCT2/: CMakeLists.txt
DCT2-GUI/: CMakeLists.txt  DiscreteCosineTransform.cpp  DiscreteCosineTransform.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
DCT2/src/: main.cpp
DCT2/src/utils/: utils.cpp  utils.h
